Updataed Greek loc for new events

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -116,7 +116,7 @@
  ww1_generic.105.d: "Because of our political vision now very different from that of the [FROM.getAdjective] government, the latter have decided to end all commercial relations. This is an embargo of all [ROOT.getAdjective] products within their economies. As a great power, [FROM.GetNameDef] heavily penalizes our economy."
  ww1_generic.105.a: "Ben voyons!"
 
- event_historical_option_tt: "§GThis option is historical§!\n\n"
+ event_orical_option_tt: "§GThis option is historical§!\n\n"
 
  ww1_political.1.t: "Authoritarianism on the Rise"
  ww1_political.1.d: ""
@@ -3311,6 +3311,23 @@ TUN_italian_minority:0 "Italian Minority"
  
  can_start_rodi_operation: "Can start the Operation"
 
+ ww1_greece.247.t: "A Defense Pact with Bulgaria?"
+ ww1_greece.247.d: "Venizelos thinks it's wise to try and form a defense agreement to counter Turksih aggression, with Bulgaria, the so called "Prussia of the Balkans." With their impressive army and our extroidinary navy we could make quite the formidable duo."
+ ww1_greece.247.a: "Might as well try"
+ ww1_greece.247.b: "Nah, not worth it"
+
+ ww1_greece.248.t: "Bulgaria Rejects the Pact"
+ ww1_greece.248.d: "Bulgaria rejected the defense pact due to their doubts about our army strength... plus the riff between the Patriarchate of Constantinople and the Bulgarian Exarchate definetely had an influence on their decision..."
+ ww1_greece.248.a: "Well, thats a bit rude"
+
+ ww1_greece.249.t: "Bulgaria Accepts the Pact"
+ ww1_greece.249.d: "Bulgaria has agreed to the pact! Let us hope that this will amend our relations and our differences, such as the riff between our respective churches and our overlapping claims in Macedonia and Thrace."
+ ww1_greece.249.a: "Cheers to our Bulgarian friends!"
+
+ ww1_greece.250.t: "Easter Spirits with Bulgaria"
+ ww1_greece.250.d: "Spring is here and warm, and so is our relations with Bulgaria! The arrival of Easter has ushered in pleasant relations with Bulgaria. During Easter Bulgarian students travelled to Athens and the joint celebration of the May Day Flower Festival in Serres! As joyous as this is will it amend the bad blood between us? For the last 50 years we've been in a religious scuffle with the Bulgarian Exarchate, after they declared independence from the Patriarchy of Constantinople which the Patriarch declared blasphemous, and not to mention our overlapping claims on Macedonia..."
+ ww1_greece.250.a: "This is great news!"
+ 
  # Crete
  ww1_crete.1.t: "[ROOT.GetLeader] Leaves for Greece"
  ww1_crete.1.d: "Venizelos has left the state for an opportunity in metropolitan Hellas."
