--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5096,9 +5096,13 @@ ROM_blurry_the_lines_between_church_and_state_desc:0 ""
 kings_gov.tt:0 "This focus will be §Yautocompleted§! if King Carol appoints the §mPCD§! to form a government"
 kings_gov2.tt:0 "This focus will be §Yautocompleted§! if the King appoints §YTitu Maiorescu§! of the §cPC§! to form a government"
 kings_gov3.tt:0 "This focus will be §Yautocompleted§! if the King appoints §YBarbu Delavrancea§! of the §cPC§! to form a government"
+kings_gov4.tt:0 "This focus will be §Yautocompleted§! if the King appoints §YConstantin Arion§! of the §cPC§! to form a government"
+ww1_romania.19.e:0 "We need someone with a lot of intelligence, let's appoint Arion"
 ROM_a_moral_romania:0 "Revive Trust in the Government"
+ROM_a_man_from_junimea:0 "A Man From Junimea"
 ROM_research_investments:0 "Rural Research Investments"
 ROM_a_moral_romania.tt:0 "For every §Y8.00%§! §3Democratic§! support, this focus will give us:\nGain Base Stability: §G+1.50%§!.\nPolitical Power: §G+5§!.\n\nBecause of our current §3Democratic§! support, this focus will give:"
+ROM_new_elites.tt:0 "Tthe §YNational Spirit§! this focus grants will be strengthened at §Y50.00%§!, §Y60.00%§!, and §Y70.00%§! §3Democratic§! support"
 ROM_a_moral_romania_desc:0 "The past few corrupt administrations - both containing the PNL and the PC, have greatly lowered the faith of the people in Romanias government. We must strive to restore the Romanian peoples confidence in our government."
 no_happy_few:0 "Didn't accept Carols request to not undo land reform"
 ROM_enpower_the_elites:0 "Empower The Elites"
@@ -5125,7 +5129,7 @@ ROM_sa_faci_din_rahat_bici:0 "Sa Faci Din Rahat Bici"
 ROM_sa_faci_din_rahat_bici_desc:0 "We don't have the steel of Germany or the vast population of Russia, but our economy still has the foundations for modernization. Welcoming the advice of industrial experts from foreign countries will help us speed up the growth of our small, but important industrial sector."
 ROM_fixing_the_railways:0 "Fixing the Railways"
 ROM_the_conservative_conservatives:0 "The Conservative in the Conservative Party"
-ROM_the_conservative_conservatives_desc:0 "The PC has started to lose its way as of late. What was originally simply a conservative party has been morphed into a mess of contradictionary left and right wing positions on various issues, with little coherence. Luckily, the appointment of Delavrancea has given us a chance to make the conservative party conservative again."
+ROM_the_conservative_conservatives_desc:0 "The PC has started to lose its way as of late. What started out as a purely conservative party has been morphed into a mess of contradictionary left and right wing positions on various issues, with little coherence. Luckily, the appointment of Delavrancea has given us a chance to make the conservative party conservative again."
 ROM_fixing_the_railways_desc:0 ""
 ROM_develop_the_north:0 "The Forgotten Half of the Country"
 ROM_develop_the_north_desc:0 "The south is the most developed part of Romania, while the north has fallen behind. We cannot ignore the needs of the people up north, and we should invest in the infrastructure up there."
@@ -5263,7 +5267,7 @@ ROM_our_rural_base:0 "Pander to Our Rural Base"
 ROM_our_rural_base_desc:0 "We need to consolidate our support across the country to ensure we have popular support. We should increase our messaging across the rural Romania and pass some small scale laws to benefit them."
 ROM_invite_western_thinkers:0 "Invite Western Thinkers"
 ROM_invite_western_thinkers_desc:0 ""
-ROM_invest_in_romania_steel_industry:0 "Invest in Romania’s Steel Industry"
+ROM_invest_in_romania_steel_industry:0 "Roll Back Land Reform"
 ROM_invest_in_romania_steel_industry_desc:0 ""
 ROM_romania_for_those_who_deserve_it:0 "Romania For Those Who Deserve it"
 ROM_romania_for_those_who_deserve_it_desc:0 ""
