added loc for the new events

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -15013,4 +15013,19 @@ test_show_shall_coco_SSP:0 "[?SSP|Y] seats for Shall's party"
  balkan_league.18.d:0 "An independent Macedonia may be prefferable in stoping further conflicts with Serbia and we could easily influence such a nation..."
  balkan_league.18.a:0 "Yes, an Independent Macedonia is prefferable"
  balkan_league.18.b:0 "No, Macedonia would be better under the Tsar's direct authority"
+
+ balkan_league.20.t: "Bulgaria Seeks an Armistice"
+ balkan_league.20.d: "Bulgaria has underestimated our army and hasn't reached a swifty victory like they thought they would; before things get worse they've reached out to sign an armistace despite their commitments to the Balkan League."
+ balkan_league.20.a: "Sign the Armistice"
+
+ balkan_league.21.t: "Southern Dubroja Oppurtunity"
+ balkan_league.21.d: "Admist the chaos in Bulgaria following their lackluster war effort against the Ottomans, we've gained an oppurtunity to swoop in and seize the territory we so desire, and there's nothing Bulgaria can do about it."
+ balkan_league.21.a: "No, too risky"
+ balkan_league.21.b: "Let's seize the oppurtunity"
+
+ balkan_league.22.t: "Romania Seizes Southern Dubroja"
+ balkan_league.22.d: "Those Romania bastards have marched into Southern Dubroja uncontested while we deal with the Balkan War turmoil..."
+ balkan_league.22.a: "Damn"
+
+ 
  
