--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5273,7 +5273,7 @@ ROM_romania_for_those_who_deserve_it:0 "Romania For Those Who Deserve it"
 ROM_romania_for_those_who_deserve_it_desc:0 ""
 ROM_austia_military_research:0  "Military Cooperation with Austria-Hungary"
 ROM_austia_military_research_desc:0 ""
-ROM_crush_the_protesters:0 "Crush The Protesters"
+ROM_crush_the_protesters:0 "Declare a State of Emergency"
 ROM_crush_the_protesters_desc:0 ""
 ROM_the_unholy_alliance:0 "The Unholy Alliance"
 ROM_the_unholy_alliance_desc:0 ""
