--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5153,7 +5153,7 @@ ROM_towards_an_industrial_economy:0 "Towards An Industrial Economy"
 ROM_towards_an_industrial_economy_desc:0 ""
 ROM_his_majestys_influence:0 "His Majesty's Influence"
 ROM_his_majestys_influence_desc:0 ""
-ROM_crush_left_wing_protesters:0 "Crush Left Wing Protesters"
+ROM_crush_left_wing_protesters:0 "End the Liberal Boycott"
 ROM_crush_left_wing_protesters_desc:0 "It seems like the radical left cannot accept the will of the people. Their protests are disrupting society and our economy, and we need to put an end to it. We shall order the police to crackdown on the disruptive protests, until the brats learn how to accept democracy."
 ROM_continue_democratization:0 "Continue Democratisation"
 ROM_continue_democratization_desc:0 "The idea of democracy was one of the strongest founding principals for Romania. While it has its faults, this system has generally worked well enough so far. Besides, if a liberal were to take power then a strong, conservative parliment would be benefit us."
@@ -5287,6 +5287,10 @@ ROM_the_carpist_renaissance:0 "The Carpist Renaissance"
 ROM_the_carpist_renaissance_desc:0 ""
 ROM_national_unity:0 "The National Unity State"
 ROM_national_unity_desc:0 ""
+ww1_romania.35.t:0 "Alexandru Marghiloman Proposes Press Censorship"
+ww1_romania.35.d:0 "As we work towards restoring decency and cooperation in our politics once again, a question amongst Carps government has arised: can the anarchists, the agitators, the embezzlers, the looters, and people who in many instances have absolutely no clue what they are doing be trusted to act in good faith? They already tried a silly boycott of our government before, and they already organized large disruptive protests just because they lost, so who's to say they wouldn't try to go further? Marghiloman in particular is concerned with this possibility, and has began drafting concepts of a plan to begin censoring news surrounding the PNL, weakening their ground game amongst voters. This would help us win future elections against the PNL, although it could anger some CINO's in the party and possibly push some of them towards the PCD or even the PNL"
+ww1_romania.35.a:0 "We have every right to interfere in the press!"
+ww1_romania.35.b:0 "It's not worth the backlash"
 ROM_national_unity.tt:0 "For every §Y8.00%§! §qProto-Fascist§! support, this focus will give us:\nGain Base Stability: §G+1.00%§!.\n\nBecause of our current §qFascist§! support, this focus will give:"
 ROM_reconcile_pcd:0 "Reconcile the PCD"
 ROM_reconcile_pcd_desc:0 ""
