--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4430,7 +4430,7 @@
  TUR_legacy_of_the_4th_lancers:0 "Legacy of the 4th Lancers"
  TUR_legacy_of_the_4th_lancers_desc:0 "It was the soldiers from the 4th lancers who cried the name of the sultan. Though it was quickly crushed, it's legacy is still renown among sultan and chaliph supporters."
  TUR_revive_yildiz_teskilati:0 "Revive Yıldız Teşkilatı"
- TUR_revive_yildiz_teskilati_desc:0 "Founded during the reign of Abdulhamid II, Yıldız Teşkilatı worked directly for him, bringing information from all over the world. Rumors say that the intelligence was so good that news from Buckingham arrived to sultan without any messanger leaving the palace. We need their support if we need to return sultan to the throne."
+ TUR_revive_yildiz_teskilati_desc:0 "Founded during the reign of Abdulhamid II, the Yıldız Teşkilatı worked directly for him, bringing information from all over the world. Rumors say that the intelligence was so good, news from Buckingham arrived to the Sultan without any messenger leaving the palace. We need their support if we need to return the Sultan to the throne."
  TUR_form_the_yildizli_officers:0 "Form Yıldızlı Officers"
  TUR_form_the_yildizli_officers_desc:0 "Yıldız Teşkilatı has proven itself to be more than useful for our efforts to bring back the sultan and restore his power. Perhaps we can use their help to regain the loyalty of the army."
  TUR_work_within_the_shadows:0 "Work Within the Shadows"
@@ -4442,14 +4442,14 @@
  TUR_intervene_in_the_elections_tt:0 "Once the elections are held, we'll §Yintervene§! and forcefully install our §Yprefered candidate§!."
  TUR_yildiz_teskilati_promoted_our_man:0 "We've forcefully install our §Yprefered candidate§!."
  TUR_formulate_a_coup:0 "Formulate a Coup"
- TUR_formulate_a_coup_desc:0 "Bringing unpopular padişah Abdulhamid II to the throne will require more than just influencing the elections. We need to stage an all out coup with the support of the Yıldız Teşkilatı. Yet if their strength within the army is low, this may cause an all out civil war."
+ TUR_formulate_a_coup_desc:0 "Bringing the unpopular padişah Abdulhamid II to the throne will require more than just influencing the elections. We need to stage an all out coup with the support of the Yıldız Teşkilatı. Yet if their strength within the army is low, this may cause an all out civil war."
  TUR_formulate_a_coup_tt:0 "\nSuccess of the coup will be dependent on the strength of §YYıldız Teşkilatı§!.\n\n§RChoosing this path will result in harsher penalties in post-coup purges.§!\n"
  TUR_depoliticize_the_army:0 "Depoliticize the Army"
  TUR_depoliticize_the_army_desc:0 "The primary task of the armed forces should be protecting the state from foreign threats. For too long our army has suffered from reactionary and revolutionary cliques, bickering over their political ambitions. In order to properly rehabilitate and modernise the army, we should get rid both of these cliques first."
  TUR_remove_army_spirit:0 "§RRemove§! as §YArmy Spirit§!:"
  TUR_available_army_spirit:0 "§GAvailable§! as §YArmy Spirit§!:"
  TUR_military_purges:0 "Military Purges"
- TUR_military_purges_desc:0 "Once again, war is looming over the horizon. Italy, looking for new colonies to conquer. In the Rumelia, our neighbours scheming to kick us out of the Balkans. But while inside, the military's own problem is enough to lead us to a schism. We have to Purge the army if we want to keep nation united."
+ TUR_military_purges_desc:0 "Once again, war is looming over the horizon. Italy, looking for new colonies to conquer. In the Rumelia, our neighbours scheming to kick us out of the Balkans. But while inside, the military's own problem is enough to lead us to a schism. We have to purge the army if we want to keep nation united."
  TUR_promote_loyal_pashas:0 "Promote Loyal Pashas"
  TUR_promote_loyal_pashas_desc:0 "Our army is divided in many ways, but there are still a few who are loyal. We should consolidate them."
  TUR_trial_of_itf:0 "Trial of İTF"
@@ -4473,9 +4473,9 @@
  TUR_fund_intelligence_operations:0 "Fund Intelligence Operations"
  TUR_fund_intelligence_operations_desc:0 "Sultan Abdulhamid II is known for his paranoia. He was afterall the founder of Yıldız Teşkilatı. In case of anyone plotting against him, we must allocate a substantial amount of resources into intelligence."
  TUR_reaffirm_the_loyalty_of_hamidiye:0 "Reaffirm the Loyalty of Hamidiye"
- TUR_reaffirm_the_loyalty_of_hamidiye_desc:0 "Hamidiye being established in Abdulhamid II's rule, quickly started acting on their own, plunging minority villages as they see it fit. We must reaffirm their loyalty to the sultan."
+ TUR_reaffirm_the_loyalty_of_hamidiye_desc:0 "Established under Abdulhamid II's rule, The Hamidiye quickly started acting on their own, plundering minority villages as they see it fit. We must reaffirm their loyalty to the sultan."
  TUR_sultan_is_the_state:0 "Sultan is the State"
- TUR_sultan_is_the_state_desc:0 "Many Ottoman officials still pledge their loyalty to the Ottoman nation instead of the sultan. By replacing sultan as the same thing as the state, we'll further increase the overall loyalty to the sultan."
+ TUR_sultan_is_the_state_desc:0 "Many Ottoman officials still pledge their loyalty to the Ottoman nation instead of the sultan. By replacing the sultan as the same thing as the state, we'll further increase the overall loyalty to the sultan."
  TUR_sultan_of_arts:0 "Sultan of Arts"
  TUR_sultan_of_arts_desc:0 "Abdulmecid II is known for his dedication to art. Even so, he's more interested in art than ruling. But this very talent of his can be used to make him sympathetic and appear as an intellectual sultan."
  TUR_construct_western_opera_buildings:0 "Construct Western Opera Buildings"
@@ -4493,9 +4493,9 @@
  TUR_architect_of_the_new_ottoman_society:0 "Architect of the New Ottoman Society"
  TUR_architect_of_the_new_ottoman_society_desc:0 "Construction on its own is not enough to save this empire. We need to reconstruct the society of this empire to something more fitting for the 20th century. One that is loyal to the state and sultan, and always follows the way of innovation."
  TUR_dynasty_of_warriors:0 "Dynasty of Warriors"
- TUR_dynasty_of_warriors_desc:0 "Ottoman dynasty has countless great warriors and tacticians. Sultan Yusuf Izzeddin is of course one of them. This dynasty with many great wariors will restore the rightful place that our empire belongs."
+ TUR_dynasty_of_warriors_desc:0 "The Ottoman dynasty has countless great warriors and tacticians. Sultan Yusuf Izzeddin is of course one of them. This dynasty with many great wariors will restore the rightful place that our empire belongs."
  TUR_imperial_military_academies:0 "Imperial Military Academies"
- TUR_imperial_military_academies_desc:0 "Recent defeats at the hands of the Europeans has proven that our military is not as mighty as it used to be. Under Yusuf Izzeddin, we will open up imperial military academies to train our soldiers ready for a contemporary war."
+ TUR_imperial_military_academies_desc:0 "Recent defeats at the hands of the Europeans have proven our military is not as mighty as it used to be. Under Yusuf Izzeddin, we will open up imperial military academies to train our soldiers ready for a contemporary war."
  TUR_commanders_within_the_family:0 "Commanders Within the Family"
  TUR_commanders_within_the_family_desc:0 "We don't have to look far to find great commanders to lead our armies. Our dynasty already has bright commanders. Promoting them and giving the care they deserve will create loyal and bright generals."
  TUR_legacy_of_mehmed_the_conqueror:0 "Legacy of Mehmed the Conqueror"
