events + focus names

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5082,8 +5082,15 @@ ww1_romania.31.t:0 "French Industrial Support Withdrawn"
 ww1_romania.31.a:0 "Whatever"
 ww1_romania.32.t:0 "French Weapon Support Withdrawn"
 ww1_romania.32.a:0 "Whatever"
+ww1_romania.36.t:0 "A Shifting Coalition"
+ww1_romania.36.d:0 "."
+ww1_romania.36.a:0 "."
+ww1_romania.37.t:0 "Old Guard Concerned about our Reforms!"
+ww1_romania.37.d:0 ""
+ww1_romania.37.a:0 "Go through with them anyways."
+ww1_romania.37.b:0 "Pause the reforms."
 ROM_french_industry_support_withdrawn.tt:0 "We will §Rlose§! the civilian factory from the focus "§YFrench Industrial Support§!""
-ROM_french_weapons_withdrawn.tt:0 "We will §Rlose§! the military factory from the focus "§YIncrease French Weapon Purchases§!"
+ROM_french_weapons_withdrawn.tt:0 "We will §Rlose§! the military factory from the focus "§YIncrease French Weapon Purchases§!""
 ROM_the_party_of_thieves:0 "The Party of Thieves"
 ROM_the_party_of_thieves_desc:0 "The PNL governments of the past have been filled with corruption, corruption so deeply rooted everywhere in society that an investigation is needed. We must investigate several public institutions for PNL corruption, and shut them down."
 pot_tt:0 "When this focus is selected:\nGets event '§YShutting Down the Tramcar Society§!'\nWe will attempt to take down several pro §lPNL§! organizations, on charges of corruption. We should be prepared to face §Rsignificant§! opposition to these actions!"
@@ -5100,6 +5107,19 @@ kings_gov4.tt:0 "This focus will be §Yautocompleted§! if the King appoints §Y
 ww1_romania.19.e:0 "We need someone with a lot of intelligence, let's appoint Arion"
 ROM_a_moral_romania:0 "Revive Trust in the Government"
 ROM_a_man_from_junimea:0 "A Man From Junimea"
+ROM_a_man_from_junimea_desc:0 ""
+ROM_harmonization_of_romanian_society:0 "Harmonisation of Romanian Society"
+ROM_harmonization_of_romanian_society_desc:0 ""
+ROM_geniocracy:0 "An Government of Intellectuals"
+ROM_geniocracy_desc:0 ""
+ROM_new_elitism:0 "New Elitism"
+ROM_new_elitism_desc:0 ""
+ROM_put_a_leash_on_carp:0 "Put a Leash on Carp"
+ROM_put_a_leash_on_carp_desc:0 ""
+ROM_the_natural_division_of_society:0 "The Natural Division of Society"
+ROM_the_natural_division_of_society_desc:0 ""
+ROM_you_think_you_just_fell_out_of_a_coconut_tree:0 "The Great Enlightenment"
+ROM_you_think_you_just_fell_out_of_a_coconut_tree_desc:0 ""
 ROM_research_investments:0 "Rural Research Investments"
 ROM_a_moral_romania.tt:0 "For every §Y8.00%§! §3Democratic§! support, this focus will give us:\nGain Base Stability: §G+1.50%§!.\nPolitical Power: §G+5§!.\n\nBecause of our current §3Democratic§! support, this focus will give:"
 ROM_new_elites.tt:0 "Tthe §YNational Spirit§! this focus grants will be strengthened at §Y50.00%§!, §Y60.00%§!, and §Y70.00%§! §3Democratic§! support"
@@ -5180,8 +5200,19 @@ ROM_overturn_the_blue_law_desc:0 "Seperation of church and state is one of the m
 pcd_leader:0 "Leader of the §mPCD§!"
 pcd_leader2:0 "Leader of the §mPCD§!"
 ROM_a_voice_of_reason:0 "A Voice of Reason"
+ROM_a_voice_of_reason_desc:0 ""
+ROM_a_useful_ally:0 "A Useful Ally"
+ROM_a_useful_ally_desc:0 ""
+ROM_democratic_coalition:0 "Democratic Coalition"
+ROM_democratic_coalition_desc:0 ""
+ROM_the_moderating_influence:0 "The Moderating Influence"
+ROM_the_moderating_influence_desc:0 ""
 ROM_the_new_constitution:0 "The Tide of Progress"
+ROM_the_new_constitution_desc:0 ""
+ROM_a_unifying_figure_head:0 "A Unifying Figurehead"
+ROM_a_unifying_figure_head_desc:0 ""
 ROM_the_house_always_wins:0 "The House Always Wins"
+ROM_the_house_always_wins_desc:0 ""
 ROM_mandatory_insurance:0 "Mandatory Insurance"
 ROM_mandatory_insurance_desc:0 "Many urban Romanians work in unsafe conditions without any compensations for their employers negligence that may lead to them being injured. We must put an end to this exploitative practice, and mandate employers give insurance to their workers."
 ROM_social_conservative_principal:0 "Social Conservative Principal"
@@ -5207,6 +5238,8 @@ ROM_encourage_romanian_migration_dobruja:0 "Encourage Romanian Migration to Dobr
 ROM_encourage_romanian_migration_dobruja_desc:0 ""
 ROM_concessions_to_muslim_romanians:0 "Concessions to Muslim Romanians"
 ROM_concessions_to_muslim_romanians_desc:0 ""
+ROM_dreams_of_a_great_romania:0 "Dreams of a Great Romania"
+ROM_dreams_of_a_great_romania_desc:0 ""
 ROM_negotiations_for_bukovina:0 "Negotiations for Bukovina"
 ROM_negotiations_for_bukovina_desc:0 ""
 ROM_support_from_germany:0 "Krupp Weapons"
