German support withdraw

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5077,11 +5077,13 @@ ww1_romania.21.a:0 "Good! We must continue actions like this"
 ww1_romania.29.t:0 "An Oppurtunity"
 ww1_romania.29.a:0 "Join"
 ww1_romania.30.t:0 "Anglo-Italian Banks Withdraw"
-ww1_romania.30.a:0 "Whatever"
+ww1_romania.30.a:0 "Whatever."
 ww1_romania.31.t:0 "French Industrial Support Withdrawn"
-ww1_romania.31.a:0 "Whatever"
+ww1_romania.31.a:0 "Whatever."
 ww1_romania.32.t:0 "French Weapon Support Withdrawn"
-ww1_romania.32.a:0 "Whatever"
+ww1_romania.32.a:0 "Whatever."
+ww1_romania.38.t:0 "German Weapon Support Withdrawn"
+ww1_romania.38.a:0 "Whatever."
 ww1_romania.36.t:0 "A Shifting Coalition"
 ww1_romania.36.d:0 "."
 ww1_romania.36.a:0 "."
@@ -5089,8 +5091,6 @@ ww1_romania.37.t:0 "Old Guard Concerned about our Reforms!"
 ww1_romania.37.d:0 ""
 ww1_romania.37.a:0 "Go through with them anyways."
 ww1_romania.37.b:0 "Pause the reforms."
-ROM_french_industry_support_withdrawn.tt:0 "We will §Rlose§! the civilian factory from the focus "§YFrench Industrial Support§!""
-ROM_french_weapons_withdrawn.tt:0 "We will §Rlose§! the military factory from the focus "§YIncrease French Weapon Purchases§!""
 ROM_the_party_of_thieves:0 "The Party of Thieves"
 ROM_the_party_of_thieves_desc:0 "The PNL governments of the past have been filled with corruption, corruption so deeply rooted everywhere in society that an investigation is needed. We must investigate several public institutions for PNL corruption, and shut them down."
 pot_tt:0 "When this focus is selected:\nGets event '§YShutting Down the Tramcar Society§!'\nWe will attempt to take down several pro §lPNL§! organizations, on charges of corruption. We should be prepared to face §Rsignificant§! opposition to these actions!"
@@ -5367,6 +5367,10 @@ ROM_german_support_withdraw.tt:0 "If we go to war with §YGermany§! the effects
 ROM_french_support_withdraw.tt:0 "If we go to war with §YFrance§! the effects from this §Yfocus§! will be §RRemoved§!."
 ROM_british_support_withdraw.tt:0 "If we go to war with §YBritain§! the effects from this §Yfocus§! will be §RRemoved§!."
 ROM_austrian_support_withdraw.tt:0 "If we go to war with §YAustria§! the effects from this §Yfocus§! will be §RRemoved§!."
+
+ROM_french_industry_support_withdrawn.tt:0 "We will §Rlose§! the civilian factory from the focus "§YFrench Industrial Support§!""
+ROM_french_weapons_withdrawn.tt:0 "We will §Rlose§! the military factory from the focus "§YIncrease French Weapon Purchases§!""
+ROM_german_weapons_withdrawn.tt:0 "We will §Rlose§! the military factory from the focus "§YKrupp Weapon Purchases§!""
 ROM_rural_base.tt:0 "If §YDmitrie Sturdza§! is hired as an advisor, this focus would have the following effects:\nChange in popularity of Democracy: §G+15.00%§!\nPolitical Power: §G+50§!.\nGain Base Stability: §G+5.00%§!.\n\n"
 ROM_rural_base.tt2:0 "\nOur advisor §YDmitrie Sturdza§! is §GImproving§! the effects of this focus."
 
