--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5270,6 +5270,9 @@ ROM_for_the_truth:0 "For Romania! For the Truth!"
 ROM_for_the_truth_desc:0 "The war with Austria is a war of liberation for the oppressed Romanians in Hungary. We must strengthen our troops resolve and reach out to Romanians in Austria Hungary who are currently being oppressed, and get them to fight on the side of truth and liberation!"
 ROM_lessons_from_carpathian_defense:0 "Against All Odds!"
 ROM_lessons_from_carpathian_defense_desc:0 ""
+ROM_our_call_to_arms:0 "Our Call to Arms"
+ROM_crush_pro_entente_protesters:0 "Crush Pro-Entente Protesters"
+ROM_crush_pro_entente_protesters_desc:0 ""
 ROM_stir_anti_austrianism:0 "Stir Anti-Austrianism"
 ROM_stir_anti_austrianism_desc:0 ""
 ROM_turn_west:0 "Turn West"
