--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5266,13 +5266,28 @@ ROM_lessons_from_balkan_wars:0 "Lessons from the Balkan Wars"
 ROM_lessons_from_balkan_wars_desc:0 "" 
 ROM_adapt_to_the_times:0 "Adapt to the Times"
 ROM_adapt_to_the_times_desc:0 ""
+ROM_to_the_trenches_you_go:0 "To the Trenches you Go"
+ROM_to_the_trenches_you_go_desc:0 ""
+ROM_restructure_the_army:0 "Restructure the Army"
+ROM_restructure_the_army_desc:0 ""
+ROM_political_unity:0 "Political Unity"
+ROM_political_unity_desc:0 ""
 ROM_for_the_truth:0 "For Romania! For the Truth!"
 ROM_for_the_truth_desc:0 "The war with Austria is a war of liberation for the oppressed Romanians in Hungary. We must strengthen our troops resolve and reach out to Romanians in Austria Hungary who are currently being oppressed, and get them to fight on the side of truth and liberation!"
 ROM_lessons_from_carpathian_defense:0 "Against All Odds!"
 ROM_lessons_from_carpathian_defense_desc:0 ""
+ROM_the_great_war_redux:0 "The World in Flames"
+ROM_the_great_war_redux_desc:0 ""
 ROM_our_call_to_arms:0 "Our Call to Arms"
+ROM_our_call_to_arms_desc:0 ""
+ROM_claim_bessarabia:0 "Claim Bessarabia"
+ROM_claim_bessarabia_desc:0 ""
 ROM_crush_pro_entente_protesters:0 "Crush Pro-Entente Protesters"
 ROM_crush_pro_entente_protesters_desc:0 ""
+ROM_abandon_the_central_powers:0 "Abandon the Central Powers"
+ROM_abandon_the_central_powers_desc:0 ""
+ROM_our_piece_of_the_pie:0 "Our Piece of the Pie"
+ROM_our_piece_of_the_pie_desc:0 ""
 ROM_stir_anti_austrianism:0 "Stir Anti-Austrianism"
 ROM_stir_anti_austrianism_desc:0 ""
 ROM_turn_west:0 "Turn West"
@@ -5309,6 +5324,8 @@ ROM_romania_for_those_who_deserve_it:0 "Romania For Those Who Deserve it"
 ROM_romania_for_those_who_deserve_it_desc:0 ""
 ROM_austia_military_research:0  "Military Cooperation with Austria-Hungary"
 ROM_austia_military_research_desc:0 ""
+ROM_krupp_weapon_purchases:0 "Krupp Weapon Purchases"
+ROM_krupp_weapon_purchases_desc:0 ""
 ROM_crush_the_protesters:0 "Declare a State of Emergency"
 ROM_crush_the_protesters_desc:0 ""
 ROM_the_unholy_alliance:0 "The Unholy Alliance"
@@ -5417,6 +5434,7 @@ ROM_rural_base.tt2:0 "\nOur advisor §YDmitrie Sturdza§! is §GImproving§! the
  TUR_reform_the_african_administration:0 "Reform the African Administration"
  TUR_reform_the_african_administration_desc:0 "Sahara with its massive desert makes it hard to rule the few people it inhabits. But as the great Ottoman Empire, we can't neglect people living in these regions. We must reform the administration in those regions to best rule and control them."
 ROM_form_the_fppr:0 "Form the FPPR"
+ROM_form_the_fppr_desc:0 ""
 ROM_deal_with_the_liberal_king:0 "Deal With the Liberal King"
 ROM_deal_with_the_liberal_king_desc:0 "The last man that can threaten our power is the king himself. Aligned with the liberals, King Ferdinand clearly cannot be trusted! He would take any opprotunity he could get to depose us for his prefered party, the PNL - or whats left of it. With parliament disbanded, Carp himself will assume responsibility for writing a new constitution, one which will protect Romanian democracy from the king by removing his ability to dismiss governments."
 deal_with_lib_king.tt:0 "Gets event '§YThe Carp Constitution§!'\nDisables the decision category §Y'The Kings Country§!' and all relating decisions and events. The king will no longer be able to §Rdismiss§! our government, and his opinion of us will no longer effect our §YPolitical Power§! or §YStability§!"
