--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5154,7 +5154,7 @@ ROM_fixing_the_railways_desc:0 ""
 ROM_develop_the_north:0 "The Forgotten Half of the Country"
 ROM_develop_the_north_desc:0 "The south is the most developed part of Romania, while the north has fallen behind. We cannot ignore the needs of the people up north, and we should invest in the infrastructure up there."
 ROM_prahova_valley:0 "Expand the Prahova Valley"
-ROM_prahova_valley_desc:0 "The prahovan valley region is where the bulk of Romanias industry lays. We must continue the development of our industry to neighboring areas of the prahovan valley for our continued economic development"
+ROM_prahova_valley_desc:0 "The Prahovan Valley region is where the bulk of Romanias industry lays. We must continue the development of our industry to neighboring areas of the Prahovan Valley for our continued economic development."
 ROM_continue_agrarianism:0 "Continue Agrarianism"
 ROM_continue_agrarianism_desc:0 ""
 ROM_increase_food_exports:0 "Increase Food Exports"
@@ -5183,7 +5183,7 @@ ROM_the_burdens_they_endure:0 "The Burdens They Bear"
 ROM_the_burdens_they_endure_desc:0 "Being a soldier is the hardest job one can have. Their devotion to Romania is unmatched, and they are the backbone of the state. We must reward our loyal soldiers with additional benefits."
 right_wing_populist:0 "Right Wing Populist"
 alexandru_c_cuza:0 "Alexandru Cuza"
-disable_halve_parliment:0 "§RDIsables§! National Focus: '§YHalve the Size of the Parliament§!'"
+disable_halve_parliment:0 "§RDIsables§! National Focus: '§YHalve Parliaments Seats§!'"
 disable_we_happy_few:0 "§RDIsables§! National Focus: '§YWe Happy Few§!'"
 ROM_promote_romanian_nationalism:0 "Promote Romanian Nationalism"
 ROM_promote_romanian_nationalism_desc:0 "There are millions of Romanians outside of our borders who live in foreign territory that should really belong to us. To prepare to bring them back home, we need to fan the flames of nationalism of the people both inside and outside our borders"
