--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2805,7 +2805,7 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  ROM_industrialization_of_prahova_valley:0 "Industrialization of Prahova Valley"
  ROM_industrialization_of_prahova_valley_desc:0 "The Prahova Valley is rich in natural resources which helps our economy, giving us an annual surplus of 5% of our GDP!"
  ROM_agricultural_economy:0 "Agricultural Economy"
- ROM_agricultural_economy_desc:0 "Centuries of Ottoman suzeranity and the rule of the Phanariots have made us an underdeveloped and agricultural country."
+ ROM_agricultural_economy_desc:0 "Centuries of Ottoman Suzerainty and the rule of the Phanariots have made us an underdeveloped and agricultural country."
  ROM_memories_of_1907:0 "Unfinished Land Reform"
  ROM_memories_of_1907_desc:0 "The 1907 peasant revolution was a rude awakening for the elites in Romania - land reform cannot wait. While the governments of the past have indeed began slowly passing land reform legislation, theres still lots to be desired."
  ROM_inexperienced_army_desc:0 "Our army hasn't fought a proper war for almost 40 years. This unproven force cannot be relied upon..."
@@ -2830,7 +2830,7 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  ROM_influx_of_western_intellectuals_idea:0 "Influx of Western Intellectuals"
  ROM_aristocratic_romania_idea:0 "An Aristocratic Romania"
  ROM_king_disaprove_idea:0 "The King's Opinion"
- ROM_king_disaprove_idea_desc:0 "While a constitutional monarchy with quite strong seperations of power, the constitution does delegate many powers to the king. Romanias king can outright dismiss governments as well as dissolve parliament in times of crisis. While very rarely used, while also holding huge influence over the opinions of Romanias public and politicians. If the king is angered by our government too much, they may support the opposition or even resort to §Rextreme measures§!. In addition, if the king approves of our government, they may use their political clout to help push our agenda."
+ ROM_king_disaprove_idea_desc:0 "While a constitutional monarchy with quite strong seperations of power, the constitution does delegate many powers to the king. Romania's king can outright dismiss governments as well as dissolve parliament in times of crisis. While very rarely used, while also holding huge influence over the opinions of Romania's public and politicians. If the king is angered by our government too much, they may support the opposition or even resort to §Rextreme measures§!. In addition, if the king approves of our government, they may use their political clout to help push our agenda."
  ROM_unfinished_land_reform:0 "Unfinished Land Reform"
  ROM_unfinished_land_reform_desc:0 ""
  ROM_concessions_to_muslim_romanians_idea:0 "Concessions to Muslim Romanians"
