--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -3327,6 +3327,19 @@ TUN_italian_minority:0 "Italian Minority"
  ww1_greece.250.t: "Easter Spirits with Bulgaria"
  ww1_greece.250.d: "Spring is here and warm, and so is our relations with Bulgaria! The arrival of Easter has ushered in pleasant relations with Bulgaria. During Easter Bulgarian students travelled to Athens and the joint celebration of the May Day Flower Festival in Serres! As joyous as this is will it amend the bad blood between us? For the last 50 years we've been in a religious scuffle with the Bulgarian Exarchate, after they declared independence from the Patriarchy of Constantinople which the Patriarch declared blasphemous, and not to mention our overlapping claims on Macedonia..."
  ww1_greece.250.a: "This is great news!"
+
+ ww1_greece.251.t: "The Ottomans invade Bulgaria!"
+ ww1_greece.251.d: "The news from Sofia has reached us, the Ottomans have unleashed an invasion of Bulgaria..
+ ww1_greece.251.a: "We must defend our ally!"
+ ww1_greece.251.b: "This is to risky..."
+
+ ww1_greece.252.t: "Bulgaria Comes to our Aid!"
+ ww1_greece.252.d: "Following the Ottoman invasion, Sofia held up their end of the pact and has declared war on those vile Turks."
+ ww1_greece.252.a: "This is Spectacular!"
+
+ ww1_greece.253.t: "Bulgaria doesn't Honor the Pact!"
+ ww1_greece.253.d: "Following the Ottoman invasion it has been crickets from Sofia..."
+ ww1_greece.253.a: "Bunch of Ottoman lovers..."
  
  # Crete
  ww1_crete.1.t: "[ROOT.GetLeader] Leaves for Greece"
@@ -8407,6 +8420,24 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_bulgaria.65.t: "Festive Spirit With Greece?"
  ww1_bulgaria.65.d: "Spring is here and warm, and so is our relations with Greece! The arrival of Easter has ushered in pleasant relations with Greece. During Easter Bulgarian students travelled to Athens and the joint celebration of the May Day Flower Festival in Serres. As joyous as this is will it amend the bad blood between us? For the last 50 years we've been in a religious scuffle with the Greek Ecumenical Patriarch of Constantinople after the Bulgarian Exarchate became independent, which the Patriarch declared blasphemous, and not to mention our overlapping clames on Macedonia..."
  ww1_bulgaria.65.a: "This Is Great News!"
+
+ ww1_bulgaria.66.t: "A Defense Pact with Greece?"
+ ww1_bulgaria.66.d: "The Greek Prime Minister, Eleftherios Venizelos, has reached out to us, seeking a mutual defense pact against Ottoman aggression. The Greeks worry that the Turks are seeking retribution for 1897..."
+ ww1_bulgaria.66.a: "Their army is far too weak to make such a commitment"
+ ww1_bulgaria.66.b: "Quite a sound idea, actually"
+
+ ww1_bulgaria.67.t: "The Ottomans Invade Greece!"
+ ww1_bulgaria.67.d: "The news from Athens have reached us, the Ottoman invasion of Greece has been confirmed."
+ ww1_bulgaria.67.a: "Not on our watch!"
+ ww1_bulgaria.67.b: "It's too risky...'
+
+ ww1_bulgaria.68.t: "Greece Comes To Our Aid!"
+ ww1_bulgaria.68.d: "A telegram from Athens has confirmed that they're commited to the pact!"
+ ww1_bulgaria.68.a: "Excellent"
+
+ ww1_bulgaria.69.t: "Greece Doesn't Honor the Pact!"
+ ww1_bulgaria.69.d: "Following the Ottoman invasion it's been crickets from Athens!"
+ ww1_bulgaria.69.a: "Show me a Greek and I'll show you a liar!"
 
  # ENGLAND
  ww1_england.1.t: "Sinking of the Titanic"
@@ -15026,6 +15057,8 @@ test_show_shall_coco_SSP:0 "[?SSP|Y] seats for Shall's party"
  balkan_league.22.t: "Romania Seizes Southern Dubroja"
  balkan_league.22.d: "Those Romania bastards have marched into Southern Dubroja uncontested while we deal with the Balkan War turmoil..."
  balkan_league.22.a: "Damn"
+
+ balkan_l
 
  
  
