--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5104,7 +5104,7 @@ kings_gov.tt:0 "This focus will be §Yautocompleted§! if King Carol appoints th
 kings_gov2.tt:0 "This focus will be §Yautocompleted§! if the King appoints §YTitu Maiorescu§! of the §cPC§! to form a government"
 kings_gov3.tt:0 "This focus will be §Yautocompleted§! if the King appoints §YBarbu Delavrancea§! of the §cPC§! to form a government"
 kings_gov4.tt:0 "This focus will be §Yautocompleted§! if the King appoints §YConstantin Arion§! of the §cPC§! to form a government"
-ww1_romania.19.e:0 "We need someone with a lot of intelligence, let's appoint Arion"
+ww1_romania.18.f:0 "We need someone with a lot of intelligence, let's appoint Arion"
 ROM_a_moral_romania:0 "Revive Trust in the Government"
 ROM_a_man_from_junimea:0 "A Man From Junimea"
 ROM_a_man_from_junimea_desc:0 ""
