--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5373,7 +5373,7 @@ ROM_speed:0 "Modify '§YRomanian Army§!' by:\n£attacker_speed_texticon Divisio
 ROM_adapt_to_times.tt:0 "Modify '§YRomanian Army§!' by:\n£attacker_speed_texticon Divisions Speed: §G+5.00%§!\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!"
 
 ROM_ttyg:0 "Modify '§YRomanian Army§!' by:\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+10.00%§!"
-ROM_reorg_army.tt:0 "Modify '§YRomanian Army§!' by:\n£organization_texticon Division Organization: §G+10.00%§!"
+ROM_reorg_army.tt:0 "Modify '§YRomanian Army§!' by:\n£organization_texticon Division Organization: §G+10.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!"
 
 ROM_adapt_times.tt:0 "Modify '§YRomanian Army§!' by:\n£defence_texticon Division Defense: §G+10.00%§!"
 ROM_for_truth.tt:0 "Modify '§YRomanian Army§!' by:\n£defence_texticon Division Defense: §G+10.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!"
