--- a/localisation/english/ww1_victory_points_l_english.yml
+++ b/localisation/english/ww1_victory_points_l_english.yml
@@ -606,6 +606,21 @@
  VICTORY_POINTS_10497: "Bitlis"
  VICTORY_POINTS_3903: "Sivas"
  VICTORY_POINTS_11871: "Urfa"
+ VICTORY_POINTS_11636: "Braila"
+ VICTORY_POINTS_3639: "Pitesti"
+ VICTORY_POINTS_9224: "Drobeta-Turnu Severin"
+ VICTORY_POINTS_687: "Tulcea"
+ VICTORY_POINTS_6677: "Calarasi"
+ VICTORY_POINTS_660: "Targoviste"
+ VICTORY_POINTS_11588: "Caracal"
+ VICTORY_POINTS_818: "Alexandria"
+ VICTORY_POINTS_6695: "Campulung"
+ VICTORY_POINTS_6747: "Bacau"
+ VICTORY_POINTS_6584: "Botosani"
+ VICTORY_POINTS_11672: "Piatra Neamt"
+ VICTORY_POINTS_723: "Vaslui"
+ VICTORY_POINTS_6729: "Barlad"
+ VICTORY_POINTS_11652: "Focsani"
 
  PETROGRAD_PROV: "Petrograd"
  LENINGRAD_PROV: "Leningrad"
