--- a/localisation/english/ww1_victory_points_l_english.yml
+++ b/localisation/english/ww1_victory_points_l_english.yml
@@ -621,6 +621,15 @@
  VICTORY_POINTS_723: "Vaslui"
  VICTORY_POINTS_6729: "Barlad"
  VICTORY_POINTS_11652: "Focsani"
+ VICTORY_POINTS_965: "Vratsa"
+ VICTORY_POINTS_649: "Shumen"
+ VICTORY_POINTS_6967: "Sliven"
+ VICTORY_POINTS_9888: "Yambol"
+ VICTORY_POINTS_9612: "Ruse"
+ VICTORY_POINTS_6842: "Veliko Tarnovo"
+ VICTORY_POINTS_3937: "Pazardzhik"
+ VICTORY_POINTS_9614: "Silistria"
+ VICTORY_POINTS_6952: "Stara Zagora"
 
  PETROGRAD_PROV: "Petrograd"
  LENINGRAD_PROV: "Leningrad"
