--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4974,6 +4974,8 @@ ww1_romania.18.d:0 "With the king losing faith in the current government, the cu
 ww1_romania.18.a:0 "The PCD will lead a stable government!"
 ww1_romania.18.b:0 "The Liberals should be given another chance"
 ww1_romania.18.c:0 "Lets go with the agrarianists in the PC"
+ww1_romania.18.e:0 "Barbu shouldn't rock the boat too much"
+
 ww1_romania.20.t:0 "The Left Boycotts Election for Bucharest Council"
 ww1_romania.20.d:0 "As a way to protest the new conservative government, the PNL and some in the PCD have decided they will be boycotting the elections for Bucharest Council. By showing low turnout will end up being, they hope to prove that the people do not actually support the conservatives. They're free to do this, as it will just ensure we win the election. The conservatives are divided however, in many different factions. While the king appointed Carps faction of the conservatives in power as Prime Minister, the people will have to pick which conservative faction wins this one.\n\nOne of the canidates aligns with Carps more elitist, authoritarian group of conservatives. They believe vast reforms arn't needed for Romania, and that parliament has been given much more power then it really should have. The other canidate comes from the anti Carp faction of the conservatives. Generally younger, and more centrist, they believe Carp holds a threat to Romanian democracy and want greater reforms to Romanias economy."
 ww1_romania.20.a:0 "The pro Carp faction wins!"
