infrastructure tech changes

--- a/localisation/english/replace/replace_research_l_english.yml
+++ b/localisation/english/replace/replace_research_l_english.yml
@@ -437,7 +437,7 @@
  improved_oil_plant:0 "Improved Oil Plant"
  improved_oil_plant_desc:0 "Moving previously experimental methods for distillation to large-scale operations will allow us to adapt better to available materials and needs."
  RAILWAY_TITLE:0 "RAILWAY"
- construction0:0 "Basic Urbanism"
+ construction0:0 "Modern Infrastructure"
  construction0_desc:0 "The thoughtful design of infrastructure appeared at the beginning of the 19th century as part of development work in European metropolises."
 
  basic_railways:0 "Basic Railway"
