A Redux of a Great War

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4975,6 +4975,8 @@ ww1_romania.18.a:0 "The PCD will lead a stable government!"
 ww1_romania.18.b:0 "The Liberals should be given another chance"
 ww1_romania.18.c:0 "Lets go with the agrarianists in the PC"
 ww1_romania.18.e:0 "Barbu shouldn't rock the boat too much"
+ROM_south_wall.tt:0 "Add §G1§! §YLand Fort§! on every tile bordering [BUL.GetFlag] §YBulgaria§!"
+ROM_strat_forts.tt:0 "Add §G3§! §YLand Fort§! on the cities of §YCaracal§!, §YAlexandria§!, §YCalarasi§!, and §YConstanta§!"
 
 ww1_romania.20.t:0 "The Left Boycotts Election for Bucharest Council"
 ww1_romania.20.d:0 "As a way to protest the new conservative government, the PNL and some in the PCD have decided they will be boycotting the elections for Bucharest Council. By showing low turnout will end up being, they hope to prove that the people do not actually support the conservatives. They're free to do this, as it will just ensure we win the election. The conservatives are divided however, in many different factions. While the king appointed Carps faction of the conservatives in power as Prime Minister, the people will have to pick which conservative faction wins this one.\n\nOne of the canidates aligns with Carps more elitist, authoritarian group of conservatives. They believe vast reforms arn't needed for Romania, and that parliament has been given much more power then it really should have. The other canidate comes from the anti Carp faction of the conservatives. Generally younger, and more centrist, they believe Carp holds a threat to Romanian democracy and want greater reforms to Romanias economy."
@@ -5244,7 +5246,7 @@ ROM_encourage_romanian_migration_dobruja:0 "Encourage Romanian Migration to Dobr
 ROM_encourage_romanian_migration_dobruja_desc:0 ""
 ROM_concessions_to_muslim_romanians:0 "Concessions to Muslim Romanians"
 ROM_concessions_to_muslim_romanians_desc:0 ""
-ROM_dreams_of_a_great_romania:0 "Dreams of a Great Romania"
+ROM_dreams_of_a_great_romania:0 "Dreams of a Greater Romania"
 ROM_dreams_of_a_great_romania_desc:0 ""
 ROM_negotiations_for_bukovina:0 "Negotiations for Bukovina"
 ROM_negotiations_for_bukovina_desc:0 ""
@@ -5282,8 +5284,8 @@ ROM_for_the_truth:0 "For Romania! For the Truth!"
 ROM_for_the_truth_desc:0 "The war with Austria is a war of liberation for the oppressed Romanians in Hungary. We must strengthen our troops resolve and reach out to Romanians in Austria Hungary who are currently being oppressed, and get them to fight on the side of truth and liberation!"
 ROM_lessons_from_carpathian_defense:0 "Against All Odds!"
 ROM_lessons_from_carpathian_defense_desc:0 ""
-ROM_the_great_war_redux:0 "The World in Flames"
-ROM_the_great_war_redux_desc:0 ""
+ROM_the_great_war_redux:0 "A Redux of a Great War"
+ROM_the_great_war_redux_desc:0 "Once again, France and Germany are engaging in all out war. While the last war between the great powers was contained amongst themselves, this time they're joined by half of the world. With our key position in Europe, its unlikely we can avoid being involved, thus we must consider our options. While the Entente would probably promise the largest land gain, is our army really ready to face Austria? We'd likely have an easier time with the Central Powers, but is it worth abandoning our ambitions on Transylvania for the near future? "
 ROM_our_call_to_arms:0 "Our Call to Arms"
 ROM_our_call_to_arms_desc:0 ""
 ROM_claim_bessarabia:0 "Claim Bessarabia"
@@ -5375,6 +5377,7 @@ ROM_romanian_army_idea:0 "Romanian Army"
 modify_rom_army:0 "Modify '§YRomanian Army§!' by:\n£army_experience Army Experience Gain: §G+0.03§!"
 ROM_army_org:0 "Modify '§YRomanian Army§!' by:\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!"
 ROM_speed:0 "Modify '§YRomanian Army§!' by:\n£attacker_speed_texticon Division Speed: §G+5.00%§!"
+ROM_suprise.tt:0 "On the completion of the §YStrike West§! focus:\nGains '§YBite and Hold§!' which grants (£attacker_speed_texticon Division Speed: §G+35.00%§!, £organization_gain_texticon Army Organization Regain: §G+25.00%§!, Entrechment Speed: §G+50.00%§!) for §Y40§! days."
 
 ROM_adapt_to_times.tt:0 "Modify '§YRomanian Army§!' by:\n£attacker_speed_texticon Divisions Speed: §G+5.00%§!\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!"
 
