--- a/localisation/english/ww1_victory_points_l_english.yml
+++ b/localisation/english/ww1_victory_points_l_english.yml
@@ -630,6 +630,13 @@
  VICTORY_POINTS_3937: "Pazardzhik"
  VICTORY_POINTS_9614: "Silistria"
  VICTORY_POINTS_6952: "Stara Zagora"
+ VICTORY_POINTS_746: "Satu Mare"
+ VICTORY_POINTS_3991: "Baia Mare"
+ VICTORY_POINTS_3694: "Targu Mures"
+ VICTORY_POINTS_9619: "Petrosani"
+ VICTORY_POINTS_12687: "Targu Ocna"
+ VICTORY_POINTS_711: "Gheorgheni"
+ VICTORY_POINTS_3649: "Resita"
 
  PETROGRAD_PROV: "Petrograd"
  LENINGRAD_PROV: "Leningrad"
